@@ -102,7 +102,7 @@ typedef struct _KerningHashElement
 {
 	if((self=[super init])) {
 		
-		kerningDictionary = NULL;
+		kerningDictionary_ = NULL;
 
 		[self parseConfigFile:fntFile];
 	}
@@ -113,15 +113,15 @@ typedef struct _KerningHashElement
 {
 	CCLOGINFO( @"cocos2d: deallocing %@", self);
 	[self purgeKerningDictionary];
-	[atlasName release];
+	[atlasName_ release];
 	[super dealloc];
 }
 
 - (NSString*) description
 {
 	return [NSString stringWithFormat:@"<%@ = %08X | Kernings:%d | Image = %@>", [self class], self,
-			HASH_COUNT(kerningDictionary),
-			[[atlasName pathComponents] lastObject] ];
+			HASH_COUNT(kerningDictionary_),
+			atlasName_];
 }
 
 
@@ -129,9 +129,9 @@ typedef struct _KerningHashElement
 {
 	tKerningHashElement *current;
 	
-	while(kerningDictionary) {
-		current = kerningDictionary; 
-		HASH_DEL(kerningDictionary,current);
+	while(kerningDictionary_) {
+		current = kerningDictionary_; 
+		HASH_DEL(kerningDictionary_,current);
 		free(current);
 	}
 }
@@ -175,7 +175,7 @@ typedef struct _KerningHashElement
 			[self parseCharacterDefinition:line charDef:&characterDefinition];
 
 			// Add the CharDef returned to the charArray
-			BMFontArray[ characterDefinition.charID ] = characterDefinition;
+			BMFontArray_[ characterDefinition.charID ] = characterDefinition;
 		}
 		else if([line hasPrefix:@"kernings count"]) {
 			[self parseKerningCapacity:line];
@@ -185,7 +185,7 @@ typedef struct _KerningHashElement
 		}
 	}
 	// Finished with lines so release it
-	[lines release];	
+	[lines release];
 }
 
 -(void) parseImageFileName:(NSString*)line fntFile:(NSString*)fntFile
@@ -211,12 +211,7 @@ typedef struct _KerningHashElement
 	propertyValue = [array objectAtIndex:1];
 	NSAssert(propertyValue,@"BitmapFontAtlas file could not be found");
 	
-	NSString *textureAtlasName = [CCFileUtils fullPathFromRelativePath:propertyValue];
-
-	NSString *relDirPathOfTextureAtlas = [fntFile stringByDeletingLastPathComponent];
-	
-	atlasName = [relDirPathOfTextureAtlas stringByAppendingPathComponent:textureAtlasName];	
-	[atlasName retain];
+	atlasName_ = [propertyValue retain];
 }
 
 -(void) parseInfoArguments:(NSString*)line
@@ -268,21 +263,21 @@ typedef struct _KerningHashElement
 		NSEnumerator *paddingEnum = [paddingValues objectEnumerator];
 		// padding top
 		propertyValue = [paddingEnum nextObject];
-		padding.top = [propertyValue intValue];
+		padding_.top = [propertyValue intValue];
 		
 		// padding right
 		propertyValue = [paddingEnum nextObject];
-		padding.right = [propertyValue intValue];
+		padding_.right = [propertyValue intValue];
 
 		// padding bottom
 		propertyValue = [paddingEnum nextObject];
-		padding.bottom = [propertyValue intValue];
+		padding_.bottom = [propertyValue intValue];
 		
 		// padding left
 		propertyValue = [paddingEnum nextObject];
-		padding.left = [propertyValue intValue];
+		padding_.left = [propertyValue intValue];
 		
-		CCLOG(@"cocos2d: padding: %d,%d,%d,%d", padding.left, padding.top, padding.right, padding.bottom);
+		CCLOG(@"cocos2d: padding: %d,%d,%d,%d", padding_.left, padding_.top, padding_.right, padding_.bottom);
 	}
 
 	// spacing (ignore)
@@ -304,7 +299,7 @@ typedef struct _KerningHashElement
 	
 	// Character ID
 	propertyValue = [nse nextObject];
-	commonHeight = [propertyValue intValue];
+	commonHeight_ = [propertyValue intValue];
 	
 	// base (ignore)
 	[nse nextObject];
@@ -409,7 +404,7 @@ typedef struct _KerningHashElement
 	tKerningHashElement *element = calloc( sizeof( *element ), 1 );
 	element->amount = amount;
 	element->key = (first<<16) | (second&0xffff);
-	HASH_ADD_INT(kerningDictionary,key, element);
+	HASH_ADD_INT(kerningDictionary_,key, element);
 }
 
 @end
@@ -458,7 +453,7 @@ typedef struct _KerningHashElement
 	NSAssert( configuration_, @"Error creating config for BitmapFontAtlas");
 
 	
-	if ((self=[super initWithFile:configuration_->atlasName capacity:[theString length]])) {
+	if ((self=[super initWithFile:configuration_->atlasName_ capacity:[theString length]])) {
 
 		opacity_ = 255;
 		color_ = ccWHITE;
@@ -489,9 +484,9 @@ typedef struct _KerningHashElement
 	int ret = 0;
 	unsigned int key = (first<<16) | (second & 0xffff);
 	
-	if( configuration_->kerningDictionary ) {
+	if( configuration_->kerningDictionary_ ) {
 		tKerningHashElement *element = NULL;
-		HASH_FIND_INT(configuration_->kerningDictionary, &key, element);		
+		HASH_FIND_INT(configuration_->kerningDictionary_, &key, element);		
 		if(element)
 			ret = element->amount;
 	}
@@ -525,8 +520,8 @@ typedef struct _KerningHashElement
 			quantityOfLines++;
 	}
 	
-	totalHeight = configuration_->commonHeight * quantityOfLines;
-	nextFontPositionY = -(configuration_->commonHeight - configuration_->commonHeight*quantityOfLines);
+	totalHeight = configuration_->commonHeight_ * quantityOfLines;
+	nextFontPositionY = -(configuration_->commonHeight_ - configuration_->commonHeight_*quantityOfLines);
 	
 	for(NSUInteger i=0; i<stringLen; i++) {
 		unichar c = [string_ characterAtIndex:i];
@@ -534,13 +529,13 @@ typedef struct _KerningHashElement
 		
 		if (c == '\n') {
 			nextFontPositionX = 0;
-			nextFontPositionY -= configuration_->commonHeight;
+			nextFontPositionY -= configuration_->commonHeight_;
 			continue;
 		}
 
 		kerningAmount = [self kerningAmountForFirst:prev second:c];
 		
-		ccBMFontDef fontDef = configuration_->BMFontArray[c];
+		ccBMFontDef fontDef = configuration_->BMFontArray_[c];
 		
 		CGRect rect = fontDef.rect;
 		
@@ -561,12 +556,12 @@ typedef struct _KerningHashElement
 			fontChar.opacity = 255;
 		}
 		
-		float yOffset = configuration_->commonHeight - fontDef.yOffset;
+		float yOffset = configuration_->commonHeight_ - fontDef.yOffset;
 		fontChar.positionInPixels = ccp( (float)nextFontPositionX + fontDef.xOffset + fontDef.rect.size.width*0.5f + kerningAmount,
 								(float)nextFontPositionY + yOffset - rect.size.height*0.5f );
 
 		// update kerning
-		nextFontPositionX += configuration_->BMFontArray[c].xAdvance + kerningAmount;
+		nextFontPositionX += configuration_->BMFontArray_[c].xAdvance + kerningAmount;
 		prev = c;
 
 		// Apply label properties
