@@ -7,9 +7,10 @@ version 0.99.5-rc1 - 12-Nov-2010
 . [FIX] Actions: OrbitCamera doesn't crash on Simulator
 . [FIX] CCArray: fastRemoveObjectAtIndex works as expected (issue #1024)
 . [FIX] CocosDenshion: Fixed possible loss of audio on iOS 4.2
-. [FIX] Configuration: removed main bundle from CCConfiguration (issue #839)
+. [FIX] Configuration: removed main bundle from CCConfiguration (issue #839 issue #773)
 . [FIX] Director: projection is doubled in RetinaDisplay mode
 . [FIX] DrawingPrimitives: don't modify the buffer in RetinaDisplay (issue #995)
+. [FIX] Label: BMFontLabel simplified loading of atlas. Doesn't use CCFileUtils (issue #1031)
 . [FIX] Menu: MenuItems can draw its children (issue #458)
 . [FIX] Menu: MenuItems positions can be controlled manually (issue #1013)
 . [FIX] Menu: Menus uses touch priority kCCMenuTouchPriority (-128) (issue #1033)
@@ -23,7 +24,8 @@ version 0.99.5-rc1 - 12-Nov-2010
 . [FIX] SpriteBatchNode: children sprites use the visible property correctly (issue #665)
 . [FIX] TextureCache: Improved loading time of cached PVR images (issue #998)
 . [FIX] Texture2D: addPVRTCImage: -> addPVRImage: since it also loads non-compressed PVR images
-. [FIX] Texture2D: Use 32-bit textures when creating labels on ARM_NEON hardware. Performance improvement.
+		To enable edit ccConfig and set CC_USE_RGBA32_LABELS_ON_NEON_ARCH = 1
+. [FIX] Texture2D: Use 32-bit textures when creating labels on ARM_NEON hardware. Performance improvement. Use 
 . [FIX] Tiled: images can be relative to source map (issue #787)
 . [FIX] Tiled: TMXLayer checks for correct GID (issue #742)
 
